# inkplate-dashboard

./: .gitattributes  .gitignore  ADDBOARD.md  ARCHITECTURE.md  BUILD_EXAMPLES.md  BUILD_QUICK_REFERENCE.md  CHANGELOG.md  CRC32_GUIDE.md  DISPLAY_CYCLE.md  FACTORY_RESET.md  HOURLY_SCHEDULING.md  HOURLY_SCHEDULING_IMPLEMENTATION.md  HOURLY_SCHEDULING_TEST_FIXES.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MODES.md  README.md  RETRY_MECHANISM_FLOW.md  ROTATION_PERFORMANCE_OPTIMIZATION.md  SCREEN_ROTATION_IMPLEMENTATION.md  TESTING_RETRY_MECHANISM.md  USING.md  build.ps1  build.sh  plan.md  run-coverage.ps1  run-coverage.sh  run-tests.ps1  run-tests.sh  setup.ps1  test-build.sh  upload.ps1
.devcontainer/: devcontainer.json  postCreate.sh
.github/: README.md  TESTING.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: README.md  build.yml  create-tag.yml  flasher-static-site.yml  release.yml  update-latest-json.yml  version-check.yml
analysis_reports/: timezone_analysis_report.md
boards/inkplate10/: board_config.h  inkplate10.ino
boards/inkplate2/: board_config.h  inkplate2.ino
boards/inkplate5v2/: board_config.h  inkplate5v2.ino
boards/inkplate6flick/: board_config.h  inkplate6flick.ino
common/: library.properties
common/examples/: config_portal_guide.md  config_test.md  generate_crc32.py  generate_crc32.sh
common/src/: battery_logic.cpp  battery_logic.h  config.h  config_logic.cpp  config_logic.h  config_manager.cpp  config_manager.h  config_portal.cpp  config_portal.h  config_portal_css.h  config_portal_html.h  config_portal_js.h  display_manager.cpp  display_manager.h  fonts.h  frontlight_manager.cpp  frontlight_manager.h  github_ota.cpp  github_ota.h  image_manager.cpp  image_manager.h  logger.cpp  logger.h  logo_bitmap.h  main_sketch.ino.inc  mqtt_manager.cpp  mqtt_manager.h  overlay_manager.cpp  overlay_manager.h  power_manager.cpp  power_manager.h  sleep_logic.cpp  sleep_logic.h  timezones.h  utils.cpp  utils.h  version.h  wifi_manager.cpp  wifi_manager.h
common/src/fonts/: FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans9pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  Picopixel.h
common/src/modes/: ap_mode_controller.cpp  ap_mode_controller.h  config_mode_controller.cpp  config_mode_controller.h  decision_logic.cpp  decision_logic.h  normal_mode_controller.cpp  normal_mode_controller.h
common/src/ui/: screen.cpp  screen.h  ui_base.cpp  ui_base.h  ui_error.cpp  ui_error.h  ui_messages.cpp  ui_messages.h  ui_status.cpp  ui_status.h
docs/: README.md
docs/dev/: BUILD_SYSTEM.md  DISPLAY_CYCLE.md  LOGGING_GUIDELINES.md  NORMAL_MODE_FLOW.md  README.md  RELEASE_WORKFLOW.md  TIMEZONE_TESTING.md  WEB_FLASHER.md
docs/dev/adr/: ADR-ADDBOARD.MD  ADR-ADR_PLAN.MD  ADR-ARCHITECTURE.MD  ADR-BUILD_EXAMPLES.MD  ADR-BUILD_QUICK_REFERENCE.MD  ADR-CAROUSEL_IMPLEMENTATION.MD  ADR-CHANGELOG.MD  ADR-CRC32_GUIDE.MD  ADR-HOURLY_SCHEDULING.MD  ADR-HOURLY_SCHEDULING_IMPLEMENTATION.MD  ADR-IMPLEMENTATION_NOTES.MD  ADR-INTEGRATION_TESTING.MD  ADR-LOGGING_REFACTOR.MD  ADR-MODES.MD  ADR-MQTT_FORCE_UPDATE.md  ADR-NETWORK_TIMEOUT_OPTIMIZATION.md  ADR-OVERLAY_SYSTEM.MD  ADR-PULL_REQUEST_TEMPLATE.MD  ADR-ROTATION_PERFORMANCE_OPTIMIZATION.MD  ADR-SCREEN_BUILDER.MD  ADR-SCREEN_ROTATION_IMPLEMENTATION.MD  ADR-SLEEP_DURATION_COMPENSATION.MD  ADR-TESTING.MD  ADR-TESTING_RETRY_MECHANISM.MD  ADR-TIMEZONE_ANALYSIS_REPORT.MD  ADR-UNIT_TESTING.MD  ADR-WEB_PORTAL_OPTIMIZATION.MD  ADR-WORKFLOWS_README.MD  README.md
docs/user/: FACTORY_RESET.md  README.md  USING.md  config_portal_guide.md  timezone_guide.md
flasher/: README.md  app.js  battery-calc.js  index.html  latest.json  manifest_inkplate10.json  manifest_inkplate2.json  manifest_inkplate5v2.json  manifest_inkplate6flick.json  styles.css
issues/: 23.md
scripts/: download_fonts.ps1  generate_latest_json.sh  generate_manifests.sh  prepare_release.sh  setup_local_testing.sh
test/: CMakeLists.txt  README.md
test/integration/: test_helpers.h  test_normal_mode_scenarios.cpp
test/mocks/: Arduino.h  Inkplate.h  config.h  config_manager.cpp  config_manager.h
test/unit/: test_battery_logic.cpp  test_config_logic.cpp  test_decision_functions.cpp  test_logger.cpp  test_overlay_logic.cpp  test_sleep_logic.cpp
